<resources>
    <string name="app_name">Tareas</string>
    <string name="mis_tareas">Mis tareas</string>
    <string name="fondo_marino">fondo_marino</string>
    <string name="josecarlos">José Carlos</string>
    <string name="password">Contraseña</string>
    <string name="user">Usuario</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="login">LOGIN</string>
    <string name="no_valido">Usuario o contraseña no válidos</string>
    <string name="tarea">Tarea</string>
    <string name="editar">Editar</string>
    <string name="anadir_tarea">Añadir Tarea</string>
    <string name="completadas">Completadas</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="cancelar">Cancelar</string>
    <string name="fecha_de_inicio">Fecha de inicio</string>
    <string name="nombre_de_la_tarea">Nombre de la tarea</string>
    <string name="nueva_tarea">Nueva Tarea</string>
    <string name="borrar_tarea">Borrar Tarea</string>
    <string name="deshacer_tarea">Deshacer Tarea</string>
    <string name="hora_de_inicio">Hora de inicio</string>
</resources>
