<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/fondomarino"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo_marino"
        android:scaleType="centerCrop"
        android:contentDescription="@string/fondo_marino">
    </ImageView>
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient2"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/titulo"
            style="@style/h1"
            android:text="@string/mis_tareas"/>
        <TextView
            android:id="@+id/subtitulo"
            style="@style/h2"
            android:text="Iniciar Sesión"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/gradient2"
            android:layout_margin="10dp"
            android:layout_marginBottom="40dp"
            android:padding="10dp">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/h3"
                    android:id="@+id/user"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/user" >
                    <requestFocus/>
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/l_contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    style="@style/h3"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:fontFamily="@font/indieflowerregular"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <Button
            style="@style/b1"
            android:layout_margin="10dp"
            android:background="@drawable/botonfondo"
            android:text="@string/login"
            android:onClick="login"/>
        <TextView
            android:id="@+id/cuentanueva"
            android:layout_margin="20dp"
            style="@style/h3"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:text="@string/crear_cuenta"
            android:onClick="crearCuenta"/>

    </LinearLayout>

</FrameLayout>