<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevaTareaActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo_marino"
        android:scaleType="centerCrop"
        android:contentDescription="@string/fondo_marino">
    </ImageView>
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient2"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/h1"
            android:text="@string/nueva_tarea"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/gradient2"
            android:layout_margin="10dp"
            android:layout_marginBottom="40dp"
            android:padding="10dp">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/h3"
                    android:id="@+id/task"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/nombre_de_la_tarea" >
                    <requestFocus/>
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fecha"
                    style="@style/h3"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/fecha_de_inicio"
                    android:inputType="date"
                    android:fontFamily="@font/indieflowerregular"
                    android:focusable="false"
                    android:onClick="cuadroFecha"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/hora"
                    style="@style/h3"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="Hora de inicio"
                    android:inputType="time"
                    android:fontFamily="@font/indieflowerregular"
                    android:focusable="false"
                    android:onClick="cuadroHora"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <Button
            style="@style/b1"
            android:layout_margin="10dp"
            android:background="@drawable/botonfondo"
            android:text="@string/anadir_tarea"
            android:onClick="nuevaTarea"/>
        <Button
            style="@style/b1"
            android:layout_margin="10dp"
            android:background="@drawable/botonfondo"
            android:text="@string/cancelar"
            android:onClick="cerrarNuevaTarea"/>

    </LinearLayout>
</FrameLayout>